@@ -2,8 +2,8 @@ package cs3500.animator.model;
 
 /**
  * A list of all shapes implemented by the animator. Note that though we have several different
- * shapes here, only rectangle and ellipse needed to be implemented. Our other  code reflects that.
+ * shapes here, only RECTANGLE and ELLIPSE needed to be implemented. Our other  code reflects that.
  */
 public enum Shapes {
-  rectangle, ellipse
+  RECTANGLE, ELLIPSE
 }
