@@ -57,9 +57,16 @@ public class AnimationToAnimationModel implements AnimationModel {
 
   @Override
   public ArrayList<IShape> getFrame(double tick) {
-    throw new UnsupportedOperationException("This type of logic is not compatible with the system "
+    ArrayList<IShape> returnable = new ArrayList<>();
+    for (Shape shape : animation.getShapes().values()) {
+      if (shape.getFirstTick() <= tick && tick <= shape.totalDuration()) {
+        returnable.add(new ShapeToIShape(shape));
+      }
+    }
+    return returnable;
+    /*throw new UnsupportedOperationException("This type of logic is not compatible with the system "
         + "we're using. We can't return a Shape's state at a single moment in time. We could"
-        + "return the Keyframe for that moment, but that seems overly messy at this time.");
+        + "return the Keyframe for that moment, but that seems overly messy at this time.");*/
   }
 
   @Override
