@@ -14,7 +14,7 @@ public class ShapeImplTest {
 
   @Test
   public void totalDuration() {
-    Shape shappy = new ShapeImpl(Shapes.ellipse, "C");
+    Shape shappy = new ShapeImpl(Shapes.ELLIPSE, "C");
     Keyframe key1 = new KeyframeImpl(0, new Position2D(0, 0),
         new Size2D(0, 0), new TextureImpl(0, 0, 0, 0));
     Keyframe key2 = new KeyframeImpl(1, new Position2D(0, 0),
@@ -24,9 +24,9 @@ public class ShapeImplTest {
     Keyframe key4 = new KeyframeImpl(5, new Position2D(0, 0),
         new Size2D(0, 0), new TextureImpl(0, 0, 0, 0));
     shappy.addMotion(new MotionImpl(0, 1,
-        new ShapeImpl(Shapes.ellipse, "C"), key1, key2));
+        new ShapeImpl(Shapes.ELLIPSE, "C"), key1, key2));
     shappy.addMotion(new MotionImpl(1, 5,
-        new ShapeImpl(Shapes.ellipse, "C"), key3, key4));
+        new ShapeImpl(Shapes.ELLIPSE, "C"), key3, key4));
 
     assertEquals(5, shappy.totalDuration());
   }
